src/test/resources/repos/invalid-binary-desc-subjects/daa/b38/aaf/daab38aaf09161bfb363c09076024a4d0a981173c39d03d3c77ab2f2f62e6414/v2/inventory.json.sha512
3287496bc77d9ec2ccc9ed8080672bc8bcd3e42adec2d9c598e658bdfabdd415b3d470ecd87dd0fed0e1318bd6a160880e4b08b5e4ee0322e4051cc85bbf3e7d	inventory.json